# drf_product_category

./: README.md  manage.py  pyproject.toml
ProductCategory/: asgi.py  settings.py  urls.py  wsgi.py
crud/: admin.py  models.py  serializers.py  urls.py  views.py
crud/migrations/: 0001_initial.py
